# opentree

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  instances.conf  pyproject.toml
docs/: DEPLOYMENT.md
docs/proposals/: 2026-04-21-silent-failure-fix.md
docs/roadmap/: roadmap.md
modules/audit-logger/: opentree.json
modules/audit-logger/rules/: audit-rules.md
modules/core/: opentree.json
modules/core/rules/: design-principles.md  environment.md  identity.md  path-conventions.md  routing.md
modules/guardrail/: opentree.json
modules/guardrail/rules/: denial-escalation.md  message-ban.md  (+2 more)
modules/memory/: opentree.json  prompt_hook.py
modules/personality/: opentree.json  prompt_hook.py
modules/requirement/: opentree.json  prompt_hook.py
modules/scheduler/: opentree.json  prompt_hook.py
modules/slack/: opentree.json  prompt_hook.py
modules/stt/: opentree.json
modules/youtube/: opentree.json
scripts/: deploy.sh
src/opentree/: __init__.py
tests/: conftest.py  test_agents_md.py  test_bot.py  test_circuit_breaker.py  test_claude_md.py  test_claude_process.py  test_cli.py  test_codex_process.py  test_codex_stream_parser.py  test_config.py  test_dispatcher.py  test_e2e_lifecycle.py  test_e2e_phase3.py  test_file_handler.py  test_health.py  test_init.py  test_integration.py  test_lifecycle.py  test_logging_config.py  test_memory_extractor.py  test_memory_schema.py  test_migration_integration.py  test_permission_completeness.py  test_placeholders.py  test_progress.py  test_prompt.py  test_prompt_hooks.py  test_prompt_safety.py  test_receiver.py  test_registry.py  test_registry_integration.py  test_reset.py  test_retry.py  test_run_sh.py  test_runner_config.py  test_sandbox_launcher.py  test_schema.py  test_session.py  test_settings.py  test_settings_coverage.py  (+9 more)
tests/e2e/: TESTING_GUIDE.md  conftest.py  test_cases_from_walter.md  test_e2e_admin.py  test_e2e_concurrency.py  test_e2e_conversation.py  test_e2e_extensions.py  test_e2e_file_handling.py  test_e2e_memory.py  test_e2e_precheck.py  test_e2e_progress.py  test_e2e_security.py  test_e2e_session.py  test_e2e_ux_resilience.py  test_e2e_wrapper.py
tests/isolation/: test_config_dir_expectations.py  test_sandbox_integration.py  verify_config_dir.sh
(+181 files in other folders)
