[project]
name = "opentree"
version = "0.1.0"
description = "Modular Claude Code CLI wrapper for personal AI agents"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.20.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opentree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=opentree --cov-report=term-missing"

[tool.coverage.run]
source = ["src/opentree"]
