[project]
name = "opentree"
version = "0.2.0"
description = "Modular Claude Code CLI wrapper for personal AI agents"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.20.0", "typer>=0.12.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "python-dotenv>=1.0.0", "slack-sdk>=3.30.0"]
slack = ["slack-bolt>=1.20.0", "slack-sdk>=3.30.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opentree"]

[project.scripts]
opentree = "opentree.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=opentree --cov-report=term-missing"
markers = [
    "e2e: end-to-end tests against live bot (requires running Bot_Walter)",
    "slow: tests that take >60 seconds",
    "destructive: tests that kill/restart the bot process",
]

[tool.coverage.run]
source = ["src/opentree"]
